# monica

./: 123.xlsx  Cargo.toml  README.txt  build.bat  build.sh  manifes-1.json  manifest.json  metadata.json
src/: main copy.rs.bak  main.rs
src/cmd/: apply.rs  backup.rs  lsinventory.rs  mod.rs  precheck.rs  rollback.rs
src/config/: mod.rs
src/db/: mod.rs
src/file/: mod.rs
src/filex/: mod.rs
src/ssh/: mod.rs
