[package]
name = "monica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
chrono = "0.4.38"
flate2 = "1.0.28"
flexi_logger = "0.28.0"
lazy_static = "1.4.0"
log = "0.4.21"
serde = {version="1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = {version="0.7.4", features = [ "runtime-async-std", "mysql", "macros" ]}
ssh2 = "0.9.4"
structopt = "0.3.26"
tar = "0.4.40"
tokio = {version = "1.37.0", features = ["full"] }
