[package]
name = "monica"
version = "0.1.8"
edition = "2021"
authors = ["liaobaikai@dsgdata.com"]
description = "DataXone(SuperSync) interim Patch Installer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# excel
calamine = "0.24.0"
# date, datetime
chrono = "0.4.38"
# tar.gz
flate2 = "1.0.28"
tar = "0.4.40"
# lazy_static
lazy_static = "1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
serde = {version="1.0.199", features = [ "derive" ]}
serde_json = "1.0.116"
sha256 = "1.5.0"
sqlx = {version="0.7.4", features = [ "runtime-async-std", "mysql", "macros" ]}
ssh2 = "0.9.4"
structopt = "0.3.26"
tokio = {version = "1.37.0", features = ["full"] }
comfy-table = "7.1.1"
dialoguer = { version = "0.11.0", default-features = false }

